# wxapp-start-template

./: .actrc  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-bake.hcl  meson.build  meson_options.txt
.github/scripts/: build-wx-macos.sh
.github/workflows/: build.yml  linux.yml  macos.yml  release.yml  windows.yml
assets/: app.icns
locale/: meson.build
locale/wxExample/: ru.po
locale/wxstd/: LINGUAS  meson.build  ru.po
packaging/: dep_check.py  meson.build  package.py
packaging/linux/: app.desktop.in  apprun.sh.in  combine_dual_webkit.py  detect_webkit.sh  dispatcher_tarball.sh.in  make_package.py  meson.build
packaging/macos/: Info.plist.in  make_bundle.py  meson.build
packaging/windows/: app.rc  installer.nsi.in  make_package.py  meson.build
src/: app.cpp  app.h  mainframe.cpp  mainframe.h  mainpanel.cpp  pch.h  version.cpp.in  version.h
src/ui/: app.cpp  mainframe.cpp  mainframe.h  mainpanel.h
toolchains/: macos-arm64-native.txt  macos-x86_64-native.txt  windows-mingw32-static-cross.txt  windows-mingw64-static-cross.txt
